[package]
name = "ruster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
clap = { version = "4.5.1", features = ["derive"] }

[profile.dev]
opt-level = 3               # Use slightly better optimizations.
overflow-checks = false 